# python-i2clcd

./: pyproject.toml
i2clcd/: __init__.py
